<resources>
    <string name="app_name">PadDemo</string>
    <string name="title">静载仪手持控制终端系统登录</string>
    <string name="user_login">用户登录</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="login">登录</string>
    <string name="usernmae_or_pwd_error">用户名或密码错误</string>
    <string name="back_to_main">返回主页</string>
    <string name="quit">退出</string>
    <string name="welcome_come_in">欢迎进入静载仪手持控制终端</string>
    <string name="device_setting">设备设置</string>
    <string name="query_data">数据查询</string>
    <string name="real_time_data">实时数据</string>
    <string name="start_test">开始实验</string>
    <string name="pause_test">暂停实验</string>
    <string name="end_test">结束实验</string>
    <string name="get_test_configure">获取实验配置</string>
    <string name="select_test">选择实验</string>
    <string name="configure_ip">配置IP</string>
    <string name="syncing_data">服务器连接成功，正在同步数据...</string>
    <string name="sync_fail">实验配置获取失败</string>
    <string name="please_select_test">请选择实验</string>
    <string name="real_time_test_data">实验实时数据</string>
    <string name="qs_line">S-Q曲线</string>
    <string name="slgt_line">S-lgt曲线</string>
    <string name="percent_no">#表(mm)</string>
</resources>
