<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#103a62">

   <include layout="@layout/title">

   </include>
   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:layout_marginLeft="50dp"
       android:layout_marginRight="50dp"
       android:background="@drawable/bg_login_main">
      <LinearLayout
          android:focusable="true"
          android:focusableInTouchMode="true"
          android:layout_width="300dp"
          android:layout_height="300dp"
          android:background="@drawable/bg_login"
          android:layout_marginLeft="500dp"
          android:layout_marginRight="50dp"
          android:layout_marginBottom="20dp"
          android:layout_marginTop="40dp"
          android:orientation="vertical">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/user_login"
             android:gravity="center_horizontal"
             android:layout_marginTop="20dp"/>
         <EditText
             android:id="@+id/et_username"
             android:layout_width="240dp"
             android:layout_height="40dp"
             android:background="@drawable/bg_login_input"
             android:gravity="center"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
             android:hint="@string/please_input_username"/>
         <EditText
             android:id="@+id/et_pwd"
             android:layout_width="240dp"
             android:layout_height="40dp"
             android:gravity="center"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/bg_login_input"
             android:layout_marginTop="20dp"
             android:hint="@string/please_input_pwd"/>
         <TextView
             android:id="@+id/tv_login"
             android:layout_width="240dp"
             android:layout_height="40dp"
             android:gravity="center"
             android:background="@drawable/bg_login_title"
             android:layout_gravity="center_horizontal"
             android:text="@string/login"
             android:focusable="true"
             android:layout_marginTop="20dp"
             android:textColor="@color/white"/>
      </LinearLayout>

   </LinearLayout>

</LinearLayout>