<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#103a62">

   <include layout="@layout/title">
   </include>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:layout_marginLeft="50dp"
       android:layout_marginRight="50dp"
       android:orientation="vertical"
       android:background="@drawable/bg_realtime_right">
       <FrameLayout
           android:layout_width="wrap_content"
           android:layout_height="50dp"
           android:layout_marginTop="30dp">
           <TextView
               android:id="@+id/tv_get_configure"
               android:layout_width="200dp"
               android:layout_height="wrap_content"
               android:layout_marginLeft="510dp"
               android:text="@string/configure_ip"
               android:gravity="center"
               android:background="@drawable/bg_login_title"/>
           <TextView
               android:id="@+id/tv_select_configure"
               android:layout_width="200dp"
               android:layout_height="wrap_content"
               android:layout_marginLeft="330dp"
               android:text="@string/select_test"
               android:gravity="center"
               android:background="@drawable/bg_login_title"/>
           <TextView
               android:id="@+id/tv_configure_ip"
               android:layout_width="200dp"
               android:layout_height="wrap_content"
               android:layout_marginLeft="150dp"
               android:text="@string/get_test_configure"
               android:gravity="center"
               android:background="@drawable/bg_login_title"/>
       </FrameLayout>

       <ImageView
           android:id="@+id/iv_loading"
           android:layout_width="44dp"
           android:layout_height="44dp"
           android:layout_marginTop="100dp"
           android:layout_gravity="center"
           android:src="@drawable/ic_refresh"/>
        <TextView
            android:id="@+id/tv_loadtip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/syncing_data"/>

       <RelativeLayout
           android:id="@+id/relative_select"
           android:layout_width="316dp"
           android:layout_height="60dp"
           android:layout_marginTop="100dp"
           android:layout_gravity="center"
           android:visibility="gone"
           android:background="@color/black">
           <TextView
               android:id="@+id/text_storageLocation"
               android:layout_width="wrap_content"
               android:layout_height="60dp"
               android:textSize="30sp"
               android:textColor="@color/white"
               android:paddingLeft="8dp"
               android:paddingRight="8dp"
               android:text="@string/please_select_test"
               android:gravity="left|center_vertical"
               />
           <ImageView
               android:id="@+id/iv_storageLocation"
               android:layout_width="25dp"
               android:layout_height="12dp"
               android:layout_marginRight="20dp"
               android:layout_marginTop="24dp"
               android:layout_alignParentRight="true"
               android:src="@drawable/ic_down"/>

       </RelativeLayout>
       <TextView
           android:id="@+id/tv_setIp"
           android:layout_width="160dp"
           android:layout_height="40dp"
           android:background="@color/black"
           android:clickable="true"
           android:textColor="@color/white"
           android:layout_gravity="center_horizontal"
           android:text="去设置"
           android:visibility="gone"
           android:gravity="center"
           android:layout_marginTop="10dp"
           android:textSize="30sp"/>
   </LinearLayout>

</LinearLayout>