<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#103a62">

   <include layout="@layout/title">
   </include>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:layout_marginLeft="50dp"
       android:layout_marginRight="50dp"
       android:layout_gravity="center_horizontal"
       android:orientation="horizontal">

       <LinearLayout
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <LinearLayout
               android:id="@+id/linear_setting"
               android:layout_width="150dp"
               android:layout_height="150dp"
               android:orientation="vertical"
               android:layout_gravity="center_horizontal"
               android:background="@drawable/bg_grid">
               <ImageView
                   android:layout_width="50dp"
                   android:layout_height="50dp"
                   android:src="@drawable/setting"
                   android:layout_gravity="center_horizontal"
                   android:layout_marginTop="30dp"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:layout_marginTop="15dp"
                   android:text="@string/device_setting"/>
           </LinearLayout>
       </LinearLayout>

       <LinearLayout
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <LinearLayout
               android:id="@+id/linear_realtime_data"
               android:layout_width="150dp"
               android:layout_height="150dp"
               android:orientation="vertical"
               android:layout_gravity="center_horizontal"
               android:background="@drawable/bg_grid">
               <ImageView
                   android:layout_width="50dp"
                   android:layout_height="50dp"
                   android:src="@drawable/realtime"
                   android:layout_gravity="center_horizontal"
                   android:layout_marginTop="30dp"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:layout_marginTop="15dp"
                   android:text="@string/real_time_data"/>
           </LinearLayout>
       </LinearLayout>
       <LinearLayout
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <LinearLayout
               android:id="@+id/linear_query_data"
               android:layout_width="150dp"
               android:layout_height="150dp"
               android:orientation="vertical"
               android:layout_gravity="center_horizontal"
               android:background="@drawable/bg_grid">
               <ImageView
                   android:layout_width="50dp"
                   android:layout_height="50dp"
                   android:src="@drawable/querydata"
                   android:layout_gravity="center_horizontal"
                   android:layout_marginTop="30dp"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:layout_marginTop="15dp"
                   android:text="@string/query_data"/>
           </LinearLayout>
       </LinearLayout>
   </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/linear_start"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_grid">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/start"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:text="@string/start_test"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/linear_pause"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_grid">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/pause"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:text="@string/pause_test"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/linear_end"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_grid">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/end"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:text="@string/end_test"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_flag"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:background="@color/colorAccent"
        android:text="@string/please_select_test"
        android:textColor="@color/white"/>


</LinearLayout>